--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
       #box {
-        width:10%;
-        height:600px;
+         width:200px;
+        height:360px;
         margin:0 auto;
         perspective:300px;
         -webkit-perspective:300px;
