--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-      #box {
-   width:180px;
-        height:240px;
-        margin:0 auto;
-        perspective:300px;
-        -webkit-perspective:300px;
+ #box {
+         width:10%;
+         height:240px;
+         margin:0 auto;
+         perspective:300px;
+         -webkit-perspective:300px;
       }
 
       #card {
